Bug 1363276 - discard video output buffers according to presentation time rather than size. r=esawin

This works around an Android 4.2.2 bug that reports incorrect sizes for hardware buffers.

MozReview-Commit-ID: 4rAu8d1RwOJ

--HG--
extra : rebase_source : f63ad96427b90dc24e0cb84319f256d1ec354b5e